; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/decnet/extr_dn_route.c_dn_fib_rules_map_destination.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/decnet/extr_dn_route.c_dn_fib_rules_map_destination.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dn_fib_res = type { %struct.TYPE_4__*, i32 }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.dn_fib_res*)* @dn_fib_rules_map_destination to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dn_fib_rules_map_destination(i32 %0, %struct.dn_fib_res* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.dn_fib_res*, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store %struct.dn_fib_res* %1, %struct.dn_fib_res** %4, align 8
  %6 = load %struct.dn_fib_res*, %struct.dn_fib_res** %4, align 8
  %7 = getelementptr inbounds %struct.dn_fib_res, %struct.dn_fib_res* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 8
  %9 = call i32 @dnet_make_mask(i32 %8)
  store i32 %9, i32* %5, align 4
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* %5, align 4
  %12 = xor i32 %11, -1
  %13 = and i32 %10, %12
  %14 = load %struct.dn_fib_res*, %struct.dn_fib_res** %4, align 8
  %15 = getelementptr inbounds %struct.dn_fib_res, %struct.dn_fib_res* %14, i32 0, i32 0
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = or i32 %13, %20
  ret i32 %21
}

declare dso_local i32 @dnet_make_mask(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
